--- a/Project1AboutMe/style.css
+++ b/Project1AboutMe/style.css
@@ -4,6 +4,7 @@ p, li, table, th, td{
 
 body {
     font-size: 12pt;
+    background-image: url("C:\Users\tromb\JavaScriptProjects\Project1_Web_Programming\BackgroundImage.jpg");
 }
 p {
     margin-top: 12px;
@@ -15,7 +16,12 @@ h1 {
 h2 {
     margin: 12px;
 }
-
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
 
 table, th, td {
     border: 3px solid black;
