--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p, li, table, th, td{
 
 body {
     font-size: 12pt;
-    background-image: url("C:\Users\tromb\JavaScriptProjects\Project1_Web_Programming\BackgroundImage.jpg");
+    background-image: url("../BackgroundImage.jpg");
 }
 p {
     margin-top: 12px;
@@ -15,12 +15,16 @@ h1 {
 }
 h2 {
     margin: 12px;
+    font-style: italic;
 }
 a {
     text-decoration: none;
 }
 a:hover {
     text-decoration: underline;
+}
+th {
+    color: darkred;
 }
 
 table, th, td {
@@ -34,7 +38,7 @@ table, th, td {
 }
 
 .imgstyle {
-    width: 100%;
+    width: 650px;
     height: auto;
     float: right;
     align-items: center;
@@ -42,22 +46,22 @@ table, th, td {
 
 .webprogramming {
     background-color: red;
-    width: 120px;
+    width: 130px;
 }
 .discretemath {
     background-color: brown;
-    width: 120px;
+    width: 130px;
 }
 .english {
     background-color: green;
-    width: 120px;
+    width: 130px;
 }
 .writing {
     background-color: orange;
-    width: 120px;
+    width: 130px;
 }
 .workout {
     background-color: teal;
-    width: 120px;
+    width: 130px;
 }
 
