changing back to different image

--- a/Project1AboutMe/style.css
+++ b/Project1AboutMe/style.css
@@ -4,7 +4,7 @@ p, li, table, th, td{
 
 body {
     font-size: 12pt;
-    background-image: url('paper.gif');
+    background-image: url("C:\Users\tromb\JavaScriptProjects\Project1_Web_Programming\BackgroundImage.jpg");
 }
 p {
     margin-top: 12px;
