--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
+
+
 p, li, table, th, td{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif 
 }
 
 body {
     font-size: 12pt;
-    background-image: url("C:\Users\tromb\JavaScriptProjects\Project1_Web_Programming\BackgroundImage.jpg");
+    background-image: url('BackgroundImage.jpg');
 }
 p {
     margin-top: 12px;
 }
 h1 {
     font-size: 30pt;
-    text-decoration: underline;
+    border-bottom: 5px solid black;
+
 }
 h2 {
     margin: 12px;
@@ -25,7 +28,11 @@ a:hover {
 }
 
 th {
-    color: white;
+    color: darkred;
+}
+div {
+    text-align: center;
+    background-color: beige;
 }
 
 table, th, td {
