--- a/style.css
+++ b/style.css
@@ -92,17 +92,18 @@ tr:nth-child(odd){
   display: none; 
   position: fixed;
   z-index: 1; 
-  padding-top: 20px; 
+  padding-top: 10px; 
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgba(0,0,0,0.5); 
+  background-color: rgba(0,0,0,0.9); 
 }
 
 .modal-img {
   margin: auto;
   display: block;
-  width: 75%;
+  width: 700px;
+  height: auto;
 }
 
 
@@ -110,8 +111,8 @@ tr:nth-child(odd){
   position: absolute;
   top: 30px;
   left: 40px;
-  color: #a59696;
-  font-size: 25px;
+  color: white;
+  font-size: 50px;
   font-weight: bold;
 }
 .close:hover {
